--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
         <div class="portfolio">
                 <!-- PROJECT#1 -->
                 <div class="box">
-                    <h2>Contact</h2>
+                    <!-- <h2>Contact</h2> -->
                     <p>
                         Email: <a href="mailto:mrchrishantis@gmail.com?subject=Chris%20Hantis%20|%20Web%20Development">mrchrishantis@gmail.com</a><br>
                         Phone: 973-615-0529<br>
@@ -66,7 +66,7 @@
     </article>
 
     <!-- Footer -->
-    <footer>
+    <footer id="footer">
         Copyright 2018.
         <br>
         <span class="footer-links">
