--- a/portfolio.html
+++ b/portfolio.html
@@ -97,22 +97,10 @@
             </div>
         </div>
 
-        <!-- <div class="parent">
-                <img src="assets/images/image-2.jpg">
-                <div class="item">RPG Game</div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam mollitia maxime hic! Fugit, minus delectus velit repellat totam similique aspernatur!</p>
-            </div>
-
-            <div class="parent">
-                <img src="assets/images/image-3.jpg">
-                <div class="item">Trivia Game</div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam mollitia maxime hic! Fugit, minus delectus velit repellat totam similique aspernatur!</p>
-            </div> -->
-
     </article>
 
     <!-- Footer -->
-    <footer>
+    <footer id="footer">
         Copyright 2018.
         <br>
         <span class="footer-links">
