--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <!-- Navigation -->
         <nav>
-            <ul role="navigation">
+            <ul>
                 <li>
                     <a href="portfolio.html">Portfolio</a>
                 </li>
@@ -49,7 +49,7 @@
     </article>
 
     <!-- Footer -->
-    <footer>
+    <footer id="footer">
         Copyright 2018.
         <br>
         <span class="footer-links">
